# VueChatAPI

./: .env.examples  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pipeline.yml
k8s/: chat-api.yml  chat-backend-service.yml  chat-db-secret.yaml  chat-db.yml  chat-ingress.yml  chat-pv.yml  chat-pvc.yml  chat-rbac-bind.yml  chat-sa.yml  deployment-updater-role.yml
src/: entrypoint.sh  pyproject.toml
src/alembic/: env.py
src/alembic/versions/: aea01863dffe_user_model.py
src/backend/: db.py  main.py  settings.py  users.py
src/backend/models/: __init__.py  users.py
src/backend/schemas/: users.py
