[tool.poetry]
name = "vuechatapi"
version = "0.1.0"
description = ""
authors = ["Roland Sobczak <rolandsobczak@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
fastapi = {extras = ["all"], version = "^0.104.1"}
websockets = "^12.0"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
environs = "^9.5.0"
pydantic-settings = "^2.1.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
